--- a/composer.json
+++ b/composer.json
@@ -7,17 +7,21 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "api-platform/doctrine-orm": "^4.1.6",
-        "api-platform/symfony": "^4.1.6",
-        "doctrine/dbal": "^3.9.4",
-        "doctrine/doctrine-bundle": "^2.14.0",
-        "doctrine/doctrine-migrations-bundle": "^3.4.1",
-        "doctrine/orm": "^3.3.2",
+        "ext-mongodb": "*",
+        "api-platform/doctrine-odm": "^4.1.18",
+        "api-platform/doctrine-orm": "^4.1.18",
+        "api-platform/symfony": "^4.1.18",
+        "doctrine/dbal": "^3.9.5",
+        "doctrine/doctrine-bundle": "^2.15.0",
+        "doctrine/doctrine-migrations-bundle": "^3.4.2",
+        "doctrine/mongodb-odm": ">=2.11.2",
+        "doctrine/mongodb-odm-bundle": ">=5.3.1",
+        "doctrine/orm": "^3.5.0",
         "dragonmantank/cron-expression": "^3.4",
         "league/flysystem-bundle": "^3.4",
         "nelmio/cors-bundle": "^2.5",
-        "nesbot/carbon": "^3.9.0",
-        "phpdocumentor/reflection-docblock": "^5.6.1",
+        "nesbot/carbon": "^3.10.1",
+        "phpdocumentor/reflection-docblock": "^5.6.2",
         "phpstan/phpdoc-parser": "^2.1",
         "symfony/asset": "7.2.*",
         "symfony/asset-mapper": "7.2.*",
@@ -25,8 +29,7 @@
         "symfony/doctrine-messenger": "7.2.*",
         "symfony/dotenv": "7.2.*",
         "symfony/expression-language": "7.2.*",
-        "symfony/flex": "^2.5.0",
-        "symfony/form": "7.2.*",
+        "symfony/flex": "^2.8.0",
         "symfony/framework-bundle": "7.2.*",
         "symfony/http-client": "7.2.*",
         "symfony/intl": "7.2.*",
@@ -41,29 +44,29 @@
         "symfony/scheduler": "7.2.*",
         "symfony/security-bundle": "7.2.*",
         "symfony/serializer": "7.2.*",
-        "symfony/stimulus-bundle": "^2.24.0",
+        "symfony/stimulus-bundle": "^2.27.0",
         "symfony/string": "7.2.*",
         "symfony/translation": "7.2.*",
         "symfony/twig-bundle": "7.2.*",
-        "symfony/ux-turbo": "^2.24.0",
+        "symfony/ux-turbo": "^2.27.0",
         "symfony/validator": "7.2.*",
         "symfony/web-link": "7.2.*",
         "symfony/workflow": "7.2.*",
         "symfony/yaml": "7.2.*",
-        "twig/extra-bundle": "^2.12|^3.20",
-        "twig/twig": "^2.12|^3.20"
+        "twig/extra-bundle": "^2.12|^3.21",
+        "twig/twig": "^2.12|^3.21.1"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.75.0",
-        "phpunit/phpunit": "^9.6.22",
+        "friendsofphp/php-cs-fixer": "^3.76.0",
+        "phpunit/phpunit": "^12.2.6",
         "symfony/browser-kit": "7.2.*",
         "symfony/css-selector": "7.2.*",
         "symfony/debug-bundle": "7.2.*",
-        "symfony/maker-bundle": "^1.62.1",
-        "symfony/phpunit-bridge": "^7.2",
+        "symfony/maker-bundle": "^1.64.0",
+        "symfony/phpunit-bridge": "^7.3.1",
         "symfony/stopwatch": "7.2.*",
         "symfony/web-profiler-bundle": "7.2.*",
-        "vimeo/psalm": "^6.10.0"
+        "vimeo/psalm": "^6.12.1"
     },
     "config": {
         "allow-plugins": {
@@ -97,6 +100,8 @@
     "scripts": {
         "tests:run" : "@php bin/phpunit",
         "tests:coverage": "@php bin/phpunit --coverage-text",
+        "tests:unit:run": "@php bin/phpunit --testsuite unit",
+        "tests:e2e:run": "@php bin/phpunit --testsuite e2e",
         "code:style:analyze": "@php vendor/bin/php-cs-fixer check src tests",
         "code:style:fix": "@php vendor/bin/php-cs-fixer fix src tests",
         "code:style:list": "@php vendor/bin/php-cs-fixer list-files src tests",
@@ -118,7 +123,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": "true",
             "require": "7.2.*"
         }
     }
