--- a/.env
+++ b/.env
@@ -43,3 +43,9 @@ MAILER_DSN=null://null
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+###> doctrine/mongodb-odm-bundle ###
+# Format described at https://www.mongodb.com/docs/php-library/current/connect/connection-options/
+# MONGODB_URL="mongodb://username:password@localhost:27017/?authSource=auth-db"
+# MONGODB_URL="mongodb+srv://username:password@YOUR_CLUSTER_NAME.YOUR_HASH.mongodb.net/?retryWrites=true&w=majority"
+###< doctrine/mongodb-odm-bundle ###
