--- a/composer.json
+++ b/composer.json
@@ -8,21 +8,22 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-mongodb": "*",
-        "api-platform/doctrine-odm": "^4.1.18",
-        "api-platform/doctrine-orm": "^4.1.18",
-        "api-platform/symfony": "^4.1.18",
-        "doctrine/dbal": "^4.2.4",
+        "ext-mbstring": "*",
+        "api-platform/doctrine-odm": "^4.1.19",
+        "api-platform/doctrine-orm": "^4.1.19",
+        "api-platform/symfony": "^4.1.19",
+        "doctrine/dbal": "^4.3.1",
         "doctrine/doctrine-bundle": "^2.15.0",
         "doctrine/doctrine-migrations-bundle": "^3.4.2",
         "doctrine/mongodb-odm": ">=2.11.2",
         "doctrine/mongodb-odm-bundle": ">=5.3.1",
         "doctrine/orm": "^3.5.0",
         "dragonmantank/cron-expression": "^3.4",
-        "league/flysystem-bundle": "^3.4",
+        "league/flysystem-bundle": "^3.5",
         "nelmio/cors-bundle": "^2.5",
         "nesbot/carbon": "^3.10.1",
         "phpdocumentor/reflection-docblock": "^5.6.2",
-        "phpstan/phpdoc-parser": "^2.1",
+        "phpstan/phpdoc-parser": "^2.2",
         "symfony/asset": "7.2.*",
         "symfony/asset-mapper": "7.2.*",
         "symfony/console": "7.2.*",
@@ -57,8 +58,8 @@
         "twig/twig": "^2.12|^3.21.1"
     },
     "require-dev": {
-        "friendsofphp/php-cs-fixer": "^3.82.2",
-        "phpunit/phpunit": "^12.2.6",
+        "friendsofphp/php-cs-fixer": "^3.84.0",
+        "phpunit/phpunit": "^12.2.7",
         "symfony/browser-kit": "7.2.*",
         "symfony/css-selector": "7.2.*",
         "symfony/debug-bundle": "7.2.*",
@@ -66,7 +67,7 @@
         "symfony/phpunit-bridge": "^7.3.1",
         "symfony/stopwatch": "7.2.*",
         "symfony/web-profiler-bundle": "7.2.*",
-        "vimeo/psalm": "^6.12.1"
+        "vimeo/psalm": "^6.13.0"
     },
     "config": {
         "allow-plugins": {
