--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,13 +13,18 @@ services:
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
-    App\:
-        resource: '../src/'
-        exclude:
-            - '../src/API/Resource'
-            - '../src/Domain'
-            - '../src/Database'
-            - '../src/Kernel.php'
+
+    App\API\:
+        resource: '../src/API'
+
+    App\Console\:
+        resource: '../src/Console'
+
+    App\Framework\:
+        resource: '../src/Framework'
+
+    App\Web\:
+        resource: '../src/Web'
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
