--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "doctrine/orm": "^3.5.1",
         "dragonmantank/cron-expression": "^3.4",
         "league/flysystem-bundle": "^3.5",
+        "league/flysystem-memory": "^3.29",
         "nelmio/cors-bundle": "^2.5",
         "nesbot/carbon": "^3.10.2",
         "phpdocumentor/reflection-docblock": "^5.6.2",
