--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,6 @@
 APP_SECRET='$ecretf0rt3st'
 KERNEL_CLASS=App\Kernel
 DATABASE_URL="sqlite:///%kernel.project_dir%/var/database.test.db"
+
+MONGODB_URL=mongodb://localhost:27017
+MONGODB_DB=patchpump_testing
