refactor(tests): changed directory structure, migrated datasets from static methods to global functions

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "doctrine/doctrine-migrations-bundle": "^3.4.2",
         "doctrine/mongodb-odm": ">=2.11.2",
         "doctrine/mongodb-odm-bundle": ">=5.3.1",
-        "doctrine/orm": "^3.5.1",
+        "doctrine/orm": "^3.5.2",
         "dragonmantank/cron-expression": "^3.4",
         "league/flysystem-bundle": "^3.5",
         "league/flysystem-memory": "^3.29",
@@ -46,11 +46,11 @@
         "symfony/scheduler": "7.2.*",
         "symfony/security-bundle": "7.2.*",
         "symfony/serializer": "7.2.*",
-        "symfony/stimulus-bundle": "^2.28.2",
+        "symfony/stimulus-bundle": "^2.29.1",
         "symfony/string": "7.2.*",
         "symfony/translation": "7.2.*",
         "symfony/twig-bundle": "7.2.*",
-        "symfony/ux-turbo": "^2.28.2",
+        "symfony/ux-turbo": "^2.29.1",
         "symfony/validator": "7.2.*",
         "symfony/web-link": "7.2.*",
         "symfony/workflow": "7.2.*",
@@ -60,7 +60,7 @@
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.85.1",
-        "phpunit/phpunit": "^12.3.0",
+        "phpunit/phpunit": "^12.3.1",
         "symfony/browser-kit": "7.2.*",
         "symfony/css-selector": "7.2.*",
         "symfony/debug-bundle": "7.2.*",
@@ -87,7 +87,38 @@
     "autoload-dev": {
         "psr-4": {
             "App\\Tests\\": "tests/"
-        }
+        },
+        "files": [
+            "tests/Fixture/Datasets/CVE/Schema/affected.php",
+            "tests/Fixture/Datasets/CVE/Schema/affected_routine.php",
+            "tests/Fixture/Datasets/CVE/Schema/affected_version.php",
+            "tests/Fixture/Datasets/CVE/Schema/affected_version_change.php",
+            "tests/Fixture/Datasets/CVE/Schema/cna.php",
+            "tests/Fixture/Datasets/CVE/Schema/cpe_applicability.php",
+            "tests/Fixture/Datasets/CVE/Schema/cpe_match.php",
+            "tests/Fixture/Datasets/CVE/Schema/cpe_node.php",
+            "tests/Fixture/Datasets/CVE/Schema/credit.php",
+            "tests/Fixture/Datasets/CVE/Schema/cvss_2_0.php",
+            "tests/Fixture/Datasets/CVE/Schema/cvss_3_0.php",
+            "tests/Fixture/Datasets/CVE/Schema/cvss_3_1.php",
+            "tests/Fixture/Datasets/CVE/Schema/cvss_4_0.php",
+            "tests/Fixture/Datasets/CVE/Schema/description.php",
+            "tests/Fixture/Datasets/CVE/Schema/description_media.php",
+            "tests/Fixture/Datasets/CVE/Schema/impact.php",
+            "tests/Fixture/Datasets/CVE/Schema/metric.php",
+            "tests/Fixture/Datasets/CVE/Schema/metric_scenario.php",
+            "tests/Fixture/Datasets/CVE/Schema/other_metric.php",
+            "tests/Fixture/Datasets/CVE/Schema/problem_description.php",
+            "tests/Fixture/Datasets/CVE/Schema/problem_type.php",
+            "tests/Fixture/Datasets/CVE/Schema/provider_metadata.php",
+            "tests/Fixture/Datasets/CVE/Schema/record.php",
+            "tests/Fixture/Datasets/CVE/Schema/record_containers.php",
+            "tests/Fixture/Datasets/CVE/Schema/record_metadata.php",
+            "tests/Fixture/Datasets/CVE/Schema/reference.php",
+            "tests/Fixture/Datasets/CVE/Schema/taxonomy_mapping.php",
+            "tests/Fixture/Datasets/CVE/Schema/taxonomy_relation.php",
+            "tests/Fixture/Datasets/CVE/Schema/timeline.php"
+        ]
     },
     "replace": {
         "symfony/polyfill-ctype": "*",
